--- a/src/App.css
+++ b/src/App.css
@@ -51,9 +51,11 @@
   right: 0;
   bottom: 0;
   left: 0;
-  padding: 1rem;
+  padding: 0.2rem;
   background-color: white;
   text-align: center;
+  height: 55px;
+  
 }
   
 .footer:hover {
@@ -62,15 +64,18 @@
 
 h1 {
   font-size: 1.1rem;
+  margin: 0px;
 }
  
 .p1 {
   font-size: 1.0rem;
   color: blue;
+  margin: 0px;
 }
 
 .p2 {
   font-size: 0.9rem;
   color: gray;
+  margin: 0px;
 }
 
