--- a/src/App.css
+++ b/src/App.css
@@ -79,3 +79,38 @@ h1 {
   margin: 0px;
 }
 
+.searchbar-wrapper {
+  border: 1px solid #DDDBDA;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height: 35px;
+  width: 95%;
+  border-radius: 2px;
+  position: relative;
+  margin: 5px auto;
+}
+
+.searchbar {
+  width: 77%;
+  display: flex;
+}
+
+.searchbar input {
+  outline: none;
+  border: none;
+  width: 100%;
+  font-size: 15px;
+}
+
+#login-container {
+  margin-top: 17%;
+}
+
+.header-div {
+  height: 110px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
