--- a/src/App.css
+++ b/src/App.css
@@ -85,10 +85,11 @@ h1 {
   justify-content: space-around;
   align-items: center;
   height: 35px;
-  width: 95%;
+  width: 55%;
   border-radius: 2px;
   position: relative;
   margin: 5px auto;
+  margin-bottom: 20px;
 }
 
 .searchbar {
@@ -113,4 +114,9 @@ h1 {
   justify-content: space-between;
   align-items: center;
 }
+
+.container-home {
+  margin-top: 40px;
+}
+
 
