--- a/src/App.css
+++ b/src/App.css
@@ -105,7 +105,7 @@ h1 {
 }
 
 #login-container {
-  margin-top: 17%;
+  margin-top: 130px;
 }
 
 .header-div {
@@ -119,4 +119,27 @@ h1 {
   margin-top: 40px;
 }
 
+#modal-dialog-margin {
+  margin-top: 200px;
+}
+
+#dockdoor-modal-header {
+  text-align: center;
+  color: rgba(77, 80, 85, 0.843);
+  font-family: "Russo One", sans-serif;
+}
+
+#dockdoor-modal-header h4 {
+  font-size: 22px;
+}
+
+.dockdoor-dropdown {
+  display: flex;
+  justify-content: center;
+}
+
+.dockdoor-dropdown-search {
+  border: 1px solid #cccccc;
+  width: 220px;
+}
 
