--- a/src/components/login.css
+++ b/src/components/login.css
@@ -62,6 +62,7 @@ html {
     font-size: 60px;
     padding-top: 80px;
     color: #01a2ff;
+    margin-bottom: 15px;
 }
 
   
@@ -78,6 +79,10 @@ html {
 
     .footer {
       display: none;
+    }
+
+    #login-container {
+      margin-top: 20px;
     }
   
   }
